# voxhorizon-csuite

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECRETS.md  SECURITY.md  SETUP.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  config.yml  feature.md  security.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  secret-scan.yml
apps/csuite-dispatcher/: Dockerfile  README.md  pyproject.toml
apps/csuite-dispatcher/src/: __init__.py  config.py  executor.py  main.py  store.py  validation.py
apps/csuite-dispatcher/tests/: test_dispatch.py
apps/csuite-ingest/: Dockerfile  README.md  pyproject.toml
apps/csuite-ingest/src/: __init__.py  base.py  config.py  runner.py  store.py
apps/csuite-ingest/src/connectors/: __init__.py  audit_feed.py  churn_reasons.py  content_calendar.py  email_engagement.py  nps_feedback.py  support_tickets.py  webinar_metrics.py
apps/csuite-ingest/tests/: test_connectors.py  test_contract.py  test_runner.py
apps/mission-control/: Dockerfile  README.md  pyproject.toml
apps/mission-control/src/: __init__.py  auth.py  clients.py  config.py  main.py  store.py
apps/mission-control/tests/: test_health_summary.py  test_mc.py
db/: SCHEMA.md
db/migrations/: 0001_csuite_readonly.sql  0002_dispatch_audit.sql  0003_v2_ingest.sql  README.md
docs/adr/: 0000-adr-template.md  0001-runtime-hermes-not-openclaw.md  0002-interface-mission-control-only.md  0003-model-codex-oauth-no-openrouter.md  0004-passive-fault-isolated-agents.md  0005-scoped-docker-socket-proxy.md  0006-read-only-data-brain-mcp.md  0007-self-hosted-supabase-data-layer.md  0008-isolation-csuite-user-net-ports.md  0009-mission-control-self-contained-service.md
docs/runbooks/: add-an-agent.md  incident-response.md  observability.md  restore.md  secret-rotation.md  vps-deployment.md
hermes/: config.csuite.patch.md  sync-csuite.sh
hermes/data-brain-mcp/: README.md  guard.py  mcp_server.py  pyproject.toml
hermes/data-brain-mcp/tests/: test_guard.py
hermes/data-brain-mcp/tests/golden/: allow.json  deny.json
infra/: .env.csuite.example  bootstrap-csuite.sh  data-brain.Dockerfile  data-brain.dockerignore  docker-compose.csuite.yml  docker-compose.dispatcher.yml  docker-compose.hermes.yml  docker-compose.ingest.yml  docker-compose.mc.yml
tests/: README.md
tests/e2e/: README.md
(+16 files in other folders)
