[project]
name = "csuite-dispatcher"
version = "0.1.0"
description = "Drives the passive Hermes agents for Mission Control"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "httpx>=0.27"]

# The Docker SDK and uvicorn are only needed on the host that runs the service;
# CI tests use FAKE_DOCKER/FAKE_STORE doubles and need neither.
[project.optional-dependencies]
runtime = ["uvicorn>=0.29", "docker>=7.0"]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
