[project]
name = "mission-control"
version = "0.1.0"
description = "The single operator interface to the Vox Horizon C-Suite"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "httpx>=0.27", "python-multipart>=0.0.9"]

[project.optional-dependencies]
runtime = ["uvicorn>=0.29"]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
