[project]
name = "csuite-data-brain-mcp"
version = "0.1.0"
description = "Read-only MCP server over the C-Suite Data Brain"
requires-python = ">=3.11"
dependencies = []

# Runtime deps are an optional extra so CI can unit-test the pure guard without
# installing the MCP runtime or a Postgres driver. Install with --extra runtime
# on the host that actually runs the server.
[project.optional-dependencies]
runtime = ["mcp>=1.0", "psycopg[binary]>=3.1"]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=guard --cov-report=term-missing --cov-fail-under=90"
